[tool.poetry]
name = "polkadots"
version = "0.1.0"
description = "This project provides the ability to construct a simulated image dataset"
authors = ["on the fly with different characteristics."]
license = "https://opensource.org/licenses/MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
